--- a/mkdocs-sample.yml
+++ b/mkdocs-sample.yml
@@ -31,8 +31,8 @@ theme:
     text: 'Source Sans Pro'
     code: 'Ubuntu Mono'
   icon:
-    logo: 'https://test-upl.quarkly.io/5e60efa12db4d10024432a9f/images/quarkly-beta-logo-on-dark.svg?v=2020-10-30T09:51:10.304Z'
-  favicon: 'https://test-upl.quarkly.io/5e60efa12db4d10024432a9f/images/favicon.png?v=2020-09-25T11:53:45.486Z'
+    logo: 'https://test-upl.quarkly.io/5e60efa12db4d10024432a9f/images/quarkly-beta-logo-on-dark.svg'
+  favicon: 'https://test-upl.quarkly.io/5e60efa12db4d10024432a9f/images/favicon.png'
 
 # Extensions
 markdown_extensions:
