--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,10 +10,10 @@ copyright: '&copy; 2019 peaceiris'
 # Repository
 repo_name: 'GitHub'
 repo_url: 'https://github.com/reflekteur/quarkly-docs'
-edit_uri: 'https://github.com/reflekteur/quarkly-docs/edit/master/docs_sample'
+edit_uri: 'https://github.com/reflekteur/quarkly-docs/edit/master/docs'
 
 # Configuration
-docs_dir: 'docs_sample'
+docs_dir: 'docs'
 theme:
   name: 'material'
   language: 'en'
